Fixed 3d icon issue on mobile devices

--- a/src/components/landing/GetRich.less
+++ b/src/components/landing/GetRich.less
@@ -70,7 +70,7 @@
 	.get-rich {
 		& .flip-card {
 			width: 100%;
-			height: 150px;
+			height: 200px;
 		}
 	}
 }
